test-ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "sample"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  namespace: "sample"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: "/"
            backend:
              serviceName: test
              servicePort: 80
